...
            )
        },
        trailingContent = {
            Switch(
                checked = enabled,
                onCheckedChange = onEnabledChange,
                modifier = Modifier.testTag("pause_background_audio"),
            )
        },
        modifier = modifier.padding(horizontal = 8.dp, vertical = 4.dp).fillMaxWidth(),
    )
}

